--- a/utils/.config.template.toml
+++ b/utils/.config.template.toml
@@ -32,6 +32,13 @@ resolution_w = { optional = false, default = 1080, example = 1440, explantation 
 resolution_h = { optional = false, default = 1920, example = 2560, explantation = "Sets the height in pixels of the final video" }
 zoom = { optional = true, default = 1, example = 1.1, explanation = "Sets the browser zoom level. Useful if you want the text larger.", type = "float", nmin = 0.1, nmax = 2, oob_error = "The text is really difficult to read at a zoom level higher than 2" }
 
+headless_browser = { optional = false, type = "bool", default = false, example = false, options = [true, false, ], explanation = "If True launches the browser in headless mode" }
+template_url = { optional = true, default = "light_reddit_mockup", example = "light_reddit_mockup", options = ["old_reddit_mockup", "light_reddit_mockup", "dark_reddit_mockup", "example", ], explanation = "Sets the comment template to use" }
+template_abbreviated_style = { optional = true, default = "new_reddit", example = "new_reddit", options = ["none", "old_reddit", "new_reddit",], explanation = "Sets the template abbreviated style" }
+use_template = { optional = true, type = "bool", default = false, example = false, options = [true, false, ], explanation = "If True loads template_url as a comment template, and fills it with data using the Reddit API (using PRAW)" }
+template_debug = { optional = true, type = "bool", default = false, example = false, options = [true, false, ], explanation = "If True writes template output html files beside screenshots" }
+screenshot_debug = { optional = true, type = "bool", default = false, example = false, options = [true, false, ], explanation = "if True enables breakpoints in critical parts of screenshot_downloader.py" }
+
 [settings.background]
 background_video = { optional = true, default = "minecraft", example = "rocket-league", options = ["minecraft", "gta", "rocket-league", "motor-gta", "csgo-surf", "cluster-truck", "minecraft-2","multiversus","fall-guys","steep", ""], explanation = "Sets the background for the video based on game name" }
 background_audio = { optional = true, default = "lofi", example = "chill-summer", options = ["lofi","lofi-2","chill-summer",""], explanation = "Sets the background audio for the video" }
