--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,100 @@
+annotated-types==0.6.0
+anyio==4.3.0
 asttokens==2.4.1
 blinker==1.7.0
-blis==0.7.11
 boto3==1.26.142
 botocore==1.29.142
 Brotli==1.1.0
-catalogue==2.0.10
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 clean-text==0.6.0
+cleantext==1.1.4
 click==8.1.7
 colorama==0.4.6
-comtypes==1.3.1
-confection==0.1.4
+comtypes==1.4.1
 cryptography==42.0.5
-cymem==2.0.8
 decorator==4.4.2
 dill==0.3.8
-elevenlabs==0.2.17
+elevenlabs==1.0.5
 emoji==1.7.0
 exceptiongroup==1.2.0
 executing==2.0.1
 ffmpeg-python==0.2.0
-filelock==3.13.1
-Flask==2.3.3
-fsspec==2024.2.0
-ftfy==6.1.3
+filelock==3.13.4
+Flask==3.0.3
+fsspec==2024.3.1
+ftfy==6.2.0
 future==1.0.0
 greenlet==2.0.2
 gTTS==2.3.2
-huggingface-hub==0.21.3
-idna==3.6
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.22.2
+idna==3.7
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
-ipython==8.22.1
+ipython==8.23.0
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
-langcodes==3.3.0
-lxml==5.1.0
-markdown-it-py==2.2.0
+joblib==1.4.0
+lxml==5.2.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 moviepy==1.0.3
-mpmath==1.3.0
 multiprocess==0.70.16
-murmurhash==1.0.10
 mutagen==1.47.0
-networkx==3.2.1
+nltk==3.8.1
 numpy==1.26.4
-packaging==23.2
-parso==0.8.3
-pathlib_abc==0.1.1
+packaging==24.0
+parso==0.8.4
 pathos==0.3.2
-pathy==0.11.0
-Pillow==9.5.0
+pillow==10.3.0
 playwright==1.34.0
 pox==0.3.4
 ppft==1.7.6.8
 praw==7.7.1
 prawcore==2.3.0
-preshed==3.0.9
 proglog==0.1.10
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
-pycparser==2.21
+pycparser==2.22
 pycryptodomex==3.20.0
-pydantic==1.10.14
+pydantic==2.7.0
+pydantic_core==2.18.1
 pyee==9.0.4
 PyExecJS==1.5.1
 Pygments==2.17.2
-pypiwin32==223;sys_platform == 'win32'
+pypiwin32==223
 python-dateutil==2.9.0.post0
 pyttsx3==2.90
-pywin32==306;sys_platform == 'win32'
+pywin32==306
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
-rich==13.4.1
+rich==13.7.1
 s3transfer==0.6.2
 six==1.16.0
-smart-open==6.4.0
-spacy==3.5.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
+sniffio==1.3.1
 stack-data==0.6.3
-sympy==1.12
-thinc==8.1.12
 tokenizers==0.13.3
 toml==0.10.2
-tomlkit==0.11.8
-torch==2.0.1
+tomlkit==0.12.4
 tqdm==4.66.2
-traitlets==5.14.1
+traitlets==5.14.2
 transformers==4.29.2
 translators==5.9.1
-typer==0.7.0
-typing_extensions==4.10.0
-Unidecode==1.3.6
+typing_extensions==4.11.0
+Unidecode==1.3.8
 update-checker==0.18.0
 urllib3==1.26.18
-wasabi==1.1.2
 wcwidth==0.2.13
 websocket-client==1.7.0
 websockets==12.0
-Werkzeug==3.0.1
-yt-dlp==2024.3.10
+Werkzeug==3.0.2
+yt-dlp==2024.4.9
