--- a/requirements.txt
+++ b/requirements.txt
@@ -70,10 +70,10 @@ pydantic_core==2.18.1
 pyee==9.0.4
 PyExecJS==1.5.1
 Pygments==2.17.2
-pypiwin32==223
+pypiwin32==223;sys_platform == 'win32'
 python-dateutil==2.9.0.post0
 pyttsx3==2.90
-pywin32==306
+pywin32==306;sys_platform == 'win32'
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
