--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,27 @@ annotated-types==0.6.0
 anyio==4.3.0
 asttokens==2.4.1
 blinker==1.7.0
+blis==0.7.11
 boto3==1.26.142
 botocore==1.29.142
 Brotli==1.1.0
+catalogue==2.0.10
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 clean-text==0.6.0
 click==8.1.7
+cloudpathlib==0.16.0
 colorama==0.4.6
 comtypes==1.4.1
+confection==0.1.4
 cryptography==42.0.5
+cymem==2.0.8
 decorator==4.4.2
 dill==0.3.8
 elevenlabs==1.0.5
 emoji==1.7.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 exceptiongroup==1.2.0
 executing==2.0.1
 ffmpeg-python==0.2.0
@@ -40,6 +46,7 @@ jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
 joblib==1.4.0
+langcodes==3.3.0
 lxml==5.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -47,6 +54,7 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 moviepy==1.0.3
 multiprocess==0.70.16
+murmurhash==1.0.10
 mutagen==1.47.0
 nltk==3.8.1
 numpy==1.26.4
@@ -54,11 +62,13 @@ packaging==24.0
 parso==0.8.4
 pathos==0.3.2
 pillow==10.3.0
+playsound==1.3.0
 playwright==1.34.0
 pox==0.3.4
 ppft==1.7.6.8
 praw==7.7.1
 prawcore==2.3.0
+preshed==3.0.9
 proglog==0.1.10
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
@@ -79,8 +89,14 @@ requests==2.31.0
 rich==13.7.1
 s3transfer==0.6.2
 six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.1
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 stack-data==0.6.3
+thinc==8.2.3
 tokenizers==0.13.3
 toml==0.10.2
 tomlkit==0.12.4
@@ -88,11 +104,14 @@ tqdm==4.66.2
 traitlets==5.14.2
 transformers==4.29.2
 translators==5.9.1
+typer==0.9.4
 typing_extensions==4.11.0
 Unidecode==1.3.8
 update-checker==0.18.0
 urllib3==1.26.18
+wasabi==1.1.2
 wcwidth==0.2.13
+weasel==0.3.4
 websocket-client==1.7.0
 websockets==12.0
 Werkzeug==3.0.2
